# Bulk-Flatpak-Refs

./: .gitignore  Dockerfile  Download.py  License  Query.py  README.md  pyproject.toml
.github/workflows/: python-publish.yml
StandAloneScripts/: Download.py  README.md
flatpaks/Compression/: page.codeberg.cozyowl.OpaqueFiles.flatpakref
flatpaks/WebBrowser/Compression/: com.github.mtkennerly.ludusavi.flatpakref  io.github.peazip.PeaZip.flatpakref  org.cubocore.CoreTime.flatpakref  re.sonny.OhMySVG.flatpakref
ref_lists/: Compression.refs  Translation.refs  WebBrowser.refs
src/fhtoolkit/: __init__.py  cli.py  download.py  query.py
src/fhtoolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
