[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fhtoolkit"
version = "1.0.0"
description = "Generate and download Flatpak ref lists from Flathub AppStream."
authors = [{ name = "Herb" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"

[project.scripts]
fhtoolkit = "fhtoolkit.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
